@@ -20,6 +20,7 @@ import os
 import math
 import logging
 from sourcespec.ssp_util import spec_minmax, moment_to_mag, mag_to_moment
+from sourcespec.ssp_version import get_git_version
 
 synth_colors = [
     '#201F1F',
@@ -92,6 +93,30 @@ def _make_fig(config, nlines, ncols, freq_minmax, moment_minmax, mag_minmax,
         fig = plt.figure(figsize=figsize)
     else:
         fig = Figure(figsize=figsize)
+    # Create an invisible axis and use it for title and footer
+    ax0 = fig.add_subplot(111)
+    ax0.set_axis_off()
+    # Add event information as a title
+    hypo = config.hypo
+    textstr = 'evid: {} lon: {:.3f} lat: {:.3f} depth: {:.1f} km ' +\
+              'time: {}'
+    textstr = textstr.format(
+        hypo.evid, hypo.longitude, hypo.latitude, hypo.depth,
+        hypo.origin_time)
+    ax0.text(0., 1.06, textstr, fontsize=12,
+             ha='left', va='top', transform=ax0.transAxes)
+    if config.options.evname is not None:
+        textstr = config.options.evname
+        ax0.text(0., 1.1, textstr, fontsize=14,
+                 ha='left', va='top', transform=ax0.transAxes)
+    # Add code information at the figure bottom
+    textstr = 'SourceSpec v{} '.format(get_git_version())
+    if not stack_plots:
+        textstr += '– Run completed on: {} {}\n'.format(
+            config.end_of_run.strftime('%Y-%m-%d %H:%M:%S'),
+            config.end_of_run_tz)
+    ax0.text(1., -0.1, textstr, fontsize=10,
+             ha='right', va='top', transform=ax0.transAxes)
     axes = []
     for n in range(nlines*ncols):
         plotn = n+1
