@@ -36,6 +36,7 @@ v0.9 - 2019-04-XX
 	- Computation of radiated energy
 	- Station-specific filters
 	- New parameters: gap_max, overlap_max
+	- Add event information, code version and run completion time to plots
 	- Multifigure plotting for traces and spectra (for large number of stations)
 	- New option to plot a station map, color-coded by station magnitude
 		(requires Cartopy)
